--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
     <link rel="stylesheet" href="styles/index.css">
 </head>
 
@@ -184,59 +185,10 @@
                     </a>
                 </li>
             </ul>
-            <div class="vitrine-container">
-                <div class="vitrine-container-item">
-                    <div>
-                        <img src="img/iphone.png" alt="iPhone">
-                    </div>
-                    <div>
-                        <h3 class="vitrine-titulo-item">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h3>
-                        <p class="vitrine-preco-antigo">R$ 30,90</p>
-                        <p class="vitrine-preco-novo">R$ 28,90</p>
-                        <p class="vitrine-preco-parcelado">ou 2x de R$ 49,95 sem juros</p>
-                        <p class="vitrine-frete">Frete grátis</p>
-                        <button class="vitrine-btn">COMPRAR</button>
-                    </div>
-                </div>
-                <div class="vitrine-container-item">
-                    <div>
-                        <img src="img/iphone.png" alt="iPhone">
-                    </div>
-                    <div>
-                        <h3 class="vitrine-titulo-item">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h3>
-                        <p class="vitrine-preco-antigo">R$ 30,90</p>
-                        <p class="vitrine-preco-novo">R$ 28,90</p>
-                        <p class="vitrine-preco-parcelado">ou 2x de R$ 49,95 sem juros</p>
-                        <p class="vitrine-frete">Frete grátis</p>
-                        <button class="vitrine-btn">COMPRAR</button>
-                    </div>
-                </div>
-                <div class="vitrine-container-item">
-                    <div>
-                        <img src="img/iphone.png" alt="iPhone">
-                    </div>
-                    <div>
-                        <h3 class="vitrine-titulo-item">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h3>
-                        <p class="vitrine-preco-antigo">R$ 30,90</p>
-                        <p class="vitrine-preco-novo">R$ 28,90</p>
-                        <p class="vitrine-preco-parcelado">ou 2x de R$ 49,95 sem juros</p>
-                        <p class="vitrine-frete">Frete grátis</p>
-                        <button class="vitrine-btn">COMPRAR</button>
-                    </div>
-                </div>
-                <div class="vitrine-container-item">
-                    <div>
-                        <img src="img/iphone.png" alt="iPhone">
-                    </div>
-                    <div>
-                        <h3 class="vitrine-titulo-item">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h3>
-                        <p class="vitrine-preco-antigo">R$ 30,90</p>
-                        <p class="vitrine-preco-novo">R$ 28,90</p>
-                        <p class="vitrine-preco-parcelado">ou 2x de R$ 49,95 sem juros</p>
-                        <p class="vitrine-frete">Frete grátis</p>
-                        <button class="vitrine-btn">COMPRAR</button>
-                    </div>
-                </div>
+            <div class="swiper mySwiper">
+                <div class="swiper-wrapper vitrine-container"></div>
+                <div class="swiper-button-next"></div>
+                <div class="swiper-button-prev"></div>
             </div>
         </section>
         <section class="parceiros">
@@ -253,60 +205,11 @@
         </section>
         <section class="vitrine">
             <h3 class="vitrine-titulo">Produtos relacionados</h3>
-            <p>Ver todos</p>
-            <div class="vitrine-container">
-                <div class="vitrine-container-item">
-                    <div>
-                        <img src="img/iphone.png" alt="iPhone">
-                    </div>
-                    <div>
-                        <h3 class="vitrine-titulo-item">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h3>
-                        <p class="vitrine-preco-antigo">R$ 30,90</p>
-                        <p class="vitrine-preco-novo">R$ 28,90</p>
-                        <p class="vitrine-preco-parcelado">ou 2x de R$ 49,95 sem juros</p>
-                        <p class="vitrine-frete">Frete grátis</p>
-                        <button class="vitrine-btn">COMPRAR</button>
-                    </div>
-                </div>
-                <div class="vitrine-container-item">
-                    <div>
-                        <img src="img/iphone.png" alt="iPhone">
-                    </div>
-                    <div>
-                        <h3 class="vitrine-titulo-item">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h3>
-                        <p class="vitrine-preco-antigo">R$ 30,90</p>
-                        <p class="vitrine-preco-novo">R$ 28,90</p>
-                        <p class="vitrine-preco-parcelado">ou 2x de R$ 49,95 sem juros</p>
-                        <p class="vitrine-frete">Frete grátis</p>
-                        <button class="vitrine-btn">COMPRAR</button>
-                    </div>
-                </div>
-                <div class="vitrine-container-item">
-                    <div>
-                        <img src="img/iphone.png" alt="iPhone">
-                    </div>
-                    <div>
-                        <h3 class="vitrine-titulo-item">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h3>
-                        <p class="vitrine-preco-antigo">R$ 30,90</p>
-                        <p class="vitrine-preco-novo">R$ 28,90</p>
-                        <p class="vitrine-preco-parcelado">ou 2x de R$ 49,95 sem juros</p>
-                        <p class="vitrine-frete">Frete grátis</p>
-                        <button class="vitrine-btn">COMPRAR</button>
-                    </div>
-                </div>
-                <div class="vitrine-container-item">
-                    <div>
-                        <img src="img/iphone.png" alt="iPhone">
-                    </div>
-                    <div>
-                        <h3 class="vitrine-titulo-item">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h3>
-                        <p class="vitrine-preco-antigo">R$ 30,90</p>
-                        <p class="vitrine-preco-novo">R$ 28,90</p>
-                        <p class="vitrine-preco-parcelado">ou 2x de R$ 49,95 sem juros</p>
-                        <p class="vitrine-frete">Frete grátis</p>
-                        <button class="vitrine-btn">COMPRAR</button>
-                    </div>
-                </div>
+            <p class="vitrine-texto">Ver todos</p>
+            <div class="swiper mySwiper">
+                <div class="swiper-wrapper vitrine-container"></div>
+                <div class="swiper-button-next"></div>
+                <div class="swiper-button-prev"></div>
             </div>
         </section>
         <section class="parceiros">
@@ -343,60 +246,11 @@
         </section>
         <section class="vitrine">
             <h3 class="vitrine-titulo">Produtos relacionados</h3>
-            <p>Ver todos</p>
-            <div class="vitrine-container">
-                <div class="vitrine-container-item">
-                    <div>
-                        <img src="img/iphone.png" alt="iPhone">
-                    </div>
-                    <div>
-                        <h3 class="vitrine-titulo-item">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h3>
-                        <p class="vitrine-preco-antigo">R$ 30,90</p>
-                        <p class="vitrine-preco-novo">R$ 28,90</p>
-                        <p class="vitrine-preco-parcelado">ou 2x de R$ 49,95 sem juros</p>
-                        <p class="vitrine-frete">Frete grátis</p>
-                        <button class="vitrine-btn">COMPRAR</button>
-                    </div>
-                </div>
-                <div class="vitrine-container-item">
-                    <div>
-                        <img src="img/iphone.png" alt="iPhone">
-                    </div>
-                    <div>
-                        <h3 class="vitrine-titulo-item">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h3>
-                        <p class="vitrine-preco-antigo">R$ 30,90</p>
-                        <p class="vitrine-preco-novo">R$ 28,90</p>
-                        <p class="vitrine-preco-parcelado">ou 2x de R$ 49,95 sem juros</p>
-                        <p class="vitrine-frete">Frete grátis</p>
-                        <button class="vitrine-btn">COMPRAR</button>
-                    </div>
-                </div>
-                <div class="vitrine-container-item">
-                    <div>
-                        <img src="img/iphone.png" alt="iPhone">
-                    </div>
-                    <div>
-                        <h3 class="vitrine-titulo-item">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h3>
-                        <p class="vitrine-preco-antigo">R$ 30,90</p>
-                        <p class="vitrine-preco-novo">R$ 28,90</p>
-                        <p class="vitrine-preco-parcelado">ou 2x de R$ 49,95 sem juros</p>
-                        <p class="vitrine-frete">Frete grátis</p>
-                        <button class="vitrine-btn">COMPRAR</button>
-                    </div>
-                </div>
-                <div class="vitrine-container-item">
-                    <div>
-                        <img src="img/iphone.png" alt="iPhone">
-                    </div>
-                    <div>
-                        <h3 class="vitrine-titulo-item">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h3>
-                        <p class="vitrine-preco-antigo">R$ 30,90</p>
-                        <p class="vitrine-preco-novo">R$ 28,90</p>
-                        <p class="vitrine-preco-parcelado">ou 2x de R$ 49,95 sem juros</p>
-                        <p class="vitrine-frete">Frete grátis</p>
-                        <button class="vitrine-btn">COMPRAR</button>
-                    </div>
-                </div>
+            <p class="vitrine-texto">Ver todos</p>
+            <div class="swiper mySwiper">
+                <div class="swiper-wrapper vitrine-container"></div>
+                <div class="swiper-button-next"></div>
+                <div class="swiper-button-prev"></div>
             </div>
         </section>
         <footer class="footer">
@@ -462,6 +316,8 @@
             </section>
         </footer>
     </main>
+    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+    <script src="./src/vitrine.js"></script>
 </body>
 
 </html>
